--- a/instant-message-ui/src/app/pages/main/main.component.scss
+++ b/instant-message-ui/src/app/pages/main/main.component.scss
@@ -50,7 +50,7 @@
 }
 
 .bg-chat {
-  //background-color: #efeae2;
+  background-color: #efeae2;
   background-image: url("/wa_bg.png");
   background-size: contain;
 }
@@ -69,7 +69,7 @@
       background: #d9fdd3;
       max-width: 65%;
       padding: 10px 10px 0 10px;
-      border-right: 5px;
+      border-radius: 5px;
       font-size: 0.9rem;
     }
     justify-content: flex-end;
@@ -112,6 +112,12 @@ i {
     color: #53bdeb;
   }
   &.ml-neg {
-    margin-left: -7x;
+    margin-left: -7px;
   }
+}
+
+.emojis-panel {
+  position: absolute;
+  left: 350px;
+  bottom: 50px;
 }
